--- a/sivbc_remake/scholars.html
+++ b/sivbc_remake/scholars.html
@@ -15,6 +15,51 @@
         <li><a href="beach.html">Beach</a></li>
         <li><a href="scholars.html">Scholarship</a></li>
     </ul>
+
+    <br>
+    <h1 style="text-align: center; color: rgb(103, 11, 11)">Sudden Impact Scholarship Fund</h1>
+
+    <div class="grid-container">
+        <div class="grid-item reason-paragraph">
+            <h2>Our Scholarship Fund Mission</h2>
+            <p style="text-align: center;">At Sudden Impact, our mission is simple: "Provide the best training for junior volleyball players in the Puget Sound Region". But it's about more than just volleyball. We strive to help our athletes learn valuable skills and values like leadership, discipline, the value of hard work and the importance of being a great teammate that will help them succeed in volleyball and more importantly in life.
+            <br>
+             As part of that mission, we offer a limited number of needs-based scholarships each season to economically disadvantaged families to help them afford the rising cost of club volleyball with the goal of enabling as broad a set of young women to participate in our teams as possible.</p>
+        </div>
+
+        <div class="grid-item purpose">
+            <h2>Purpose</h2>
+            <p>Provide financial support for junior volleyball players who are financially disadvantaged or experiencing financial hardship.</p>
+        </div>
+
+        <div class="grid-item elig">
+            <h2>Eligibility</h2>
+            <ol>
+                <li>Must be selected for a Sudden Impact team during the current club season</li>
+                <li>Must be enrolled and be attending K-12 school (public, private or homeschool are acceptable)</li>
+                <li>Must demonstrate that club volleyball would present a financial hardship to the athlete's family.</li>
+            </ol>
+        </div> 
+        
+        <div class="grid-item deadline">
+            <h2>Deadline</h2>
+            <p>Please bring (or email scholarship@sivbc.org) your confidential application with you to your daughter's tryouts and submit it to Sherrie Brown, Administrative Coordinator.</p>
+        </div>
+
+        <div class="grid-item criteria">
+            <h2>Criteria</h2>
+            <p>Recipients will be selected by the four-person Sudden Impact Scholarship Committee. Consideration will be given to applicants need using a standard selection protocol that evaluates: 
+                <br>
+                • Demonstrated financial need
+                <br>
+                • Unusual personal or family circumstances</p>
+        </div>
+
+        <div class="grid-item applic">
+            <h2><a href="https://www.sivbc.org/_files/ugd/59e34b_f8cf27b9cee44320a5a7e5de9ce879c3.pdf" style="color: rgb(103, 11, 11)">2023-2024 Application</a></h2>
+        </div>
+
+    </div>
     
 </body>
 </html>
