--- a/sivbc_remake/about.html
+++ b/sivbc_remake/about.html
@@ -44,13 +44,19 @@
             <p>We employ the Gold Medal Squared coaching philosophy and methodology. We have applied these skills and coaching techniques among all of our teams over the past 11 years to fortify a strong, consistent framework for all our athletes to improve their skills as volleyball players. Through this consistent way of teaching, we continue to develop a winning club program throughout all of our age groups. Whether a player is 10 or 18, she will be taught the same principles of volleyball in a positive way that will develop her into a better volleyball player.</p>
         </div>
 
-
-
     </div>
 
-    <img src="images/one-coach.jpeg" width="500px" height="600px">
+        <img src="images/just-mich.jpeg" height="500px">
 
-    <img src="images/cropjustmich.png" float="right" width="700px">
+        <img src="images/one-coach.jpeg" height="500px" float="left">
+
+        <img src="images/greg-with-players.png" height="500px" float="left">
+
+
+
+    
+
+
     
 </body>
 </html>
