--- a/sivbc_remake/alumni.html
+++ b/sivbc_remake/alumni.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nehmat Final Project | SIVBC Remake</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/bcs3ioj.css">
     <style>
         .container {
   position: relative;
@@ -58,6 +59,7 @@
         <li><a href="alumni.html">Alumni</a></li>
         <li><a href="beach.html">Beach</a></li>
         <li><a href="scholars.html">Scholarship</a></li>
+        
     </ul>
 
     <br>
