--- a/sivbc_remake/index.html
+++ b/sivbc_remake/index.html
@@ -74,7 +74,7 @@
 
     <img src="images/longpic.png" height="200px">
 
-    <img src="images/makana.png" height="200px">
+    <img src="images/makana.png" height="200px" float="left">
 
     <br>
 
